--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 illustration">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/Image3.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/Image3.JPG" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Project Title</h4>
               </div>
-              <img src="img/portfolio/Image3.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/Image3.JPG" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 graphic">
@@ -142,11 +142,11 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 graphic">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/Image7.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/Image7.JPG" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Project Title</h4>
               </div>
-              <img src="img/portfolio/Image7.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/Image7.JPG" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 illustration">
